[gd_scene load_steps=5 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/models/PlayerModel.glb" type="PackedScene" id=2]
[ext_resource path="res://assets/sfx/run.ogg" type="AudioStream" id=4]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.2, 0.6, 0.625 )

[node name="Player" type="KinematicBody" groups=[
"game",
"hittable",
]]
collision_mask = 6
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0254979, 0 )
shape = SubResource( 1 )

[node name="PlayerModel" parent="." instance=ExtResource( 2 )]

[node name="Timers" type="Node" parent="."]

[node name="SlideTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="JumpTimer" type="Timer" parent="Timers"]
wait_time = 0.7
one_shot = true

[node name="Sfx" type="Node" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Sfx"]
stream = ExtResource( 4 )
volume_db = -10.0
[connection signal="timeout" from="Timers/SlideTimer" to="." method="_on_SlideTimer_timeout"]
[connection signal="timeout" from="Timers/JumpTimer" to="." method="_on_JumpTimer_timeout"]
